--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opux Store - одежда на заказ</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="java.js"></script>
-
 </head>
 <body>
     <h1>Hi</h1>
