--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opux WebDev - порфтолио</title>
+    <title>Opux Web</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="java.js"></script>
 </head>
